deployments/base/gbookshelf-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gbookshelf-server
  labels:
    name: gbookshelf-server
spec:
  selector:
    name: gbookshelf-server
  ports:
  - name: http
    port: 8888
    protocol: TCP
    targetPort: 8888
  - name: metrics
    port: 2112
    protocol: TCP
    targetPort: 2112
  type: ClusterIP
